# smartcart-backend

./: Readme.md  main.py  pyproject.toml
smartcart/: settings.py
