[tool.poetry]
name = "smartcart-backend"
version = "0.1.0"
description = ""
authors = ["Muhammad Azeem Rao"]
readme = "README.md"
packages = [{include = "smartcart_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
