[tool.poetry]
name = "django-smartcart-backend"
version = "0.1.0"
description = ""
authors = ["Muhammad Azeem Rao"]
readme = "README.md"
packages = [{include = "django_smartcart_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
